name:                 lhc
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Maciej Kacprzak
maintainer:           paramaciej@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable latc
  main-is:              Main.hs
  other-modules:
    ErrM
    AbsLatte
    LexLatte
    ParLatte

    Asm.Generator
    Asm.RegAlloc
    Quattro.Alive
    Quattro.Generator
    Quattro.Types
    Quattro.Validator
    Utils.Abstract
    Utils.Eval
    Utils.Position
    Utils.Show
    Utils.ToAbstract
    Utils.Types
    Utils.Verbose

  -- other-extensions:
  build-depends:        base >= 4.7 && < 5,
                        array,
                        mtl,
                        containers,
                        lens,
                        ansi-terminal
  hs-source-dirs:       src
  default-language:     Haskell2010

executable latc_x86
  main-is:              MainX86.hs
  ghc-options:          -main-is MainX86
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010